@@ -2,6 +2,7 @@ package nz.ac.canterbury.seng302.portfolio.service.group;
 
 import nz.ac.canterbury.seng302.portfolio.model.evidence.Categories;
 import nz.ac.canterbury.seng302.portfolio.model.evidence.Evidence;
+import nz.ac.canterbury.seng302.portfolio.model.evidence.PortfolioEvidence;
 import nz.ac.canterbury.seng302.portfolio.model.group.Group;
 import nz.ac.canterbury.seng302.portfolio.model.user.User;
 import nz.ac.canterbury.seng302.portfolio.service.evidence.EvidenceService;
@@ -31,6 +32,10 @@ class GroupChartDataServiceTests {
     private final User testUser2 = new User(UserResponse.newBuilder().setId(2).build());
     private static final int testParentProjectId = 1;
     private static final int testGroupId = 1;
+    private static final Date startDate = Date.valueOf("2022-01-01");
+    private static final Date dateInBound = Date.valueOf("2023-01-01");
+    private static final Date endDate = Date.valueOf("2024-01-01");
+
     private static final String TEST_DESCRIPTION = "According to all known laws of aviation, there is no way a bee should be able to fly.";
 
     //Skills//
@@ -60,7 +65,8 @@ class GroupChartDataServiceTests {
         List<User> testUserList = new ArrayList<>();
         testUserList.add(testUser1);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-01-11"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-01-11"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1)).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
@@ -76,8 +82,9 @@ class GroupChartDataServiceTests {
         List<User> testUserList = new ArrayList<>();
         testUserList.add(testUser1);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf(evidenceDate));
-        testEvidence1.addSkill("test");
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf(evidenceDate));
+        testEvidence1A.addSkill("test");
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1)).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
@@ -92,9 +99,10 @@ class GroupChartDataServiceTests {
         List<User> testUserList = new ArrayList<>();
         testUserList.add(testUser1);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
-        testEvidence1.addSkill("test");
-        testEvidence1.addSkill("jUnit");
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
+        testEvidence1A.addSkill("test");
+        testEvidence1A.addSkill("jUnit");
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1)).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
@@ -132,7 +140,8 @@ class GroupChartDataServiceTests {
         testUser1.setLastName("One");
         testUserList.add(testUser1);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence();
+        Evidence testEvidence1A = new Evidence();
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1)).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
@@ -151,7 +160,8 @@ class GroupChartDataServiceTests {
         testUserList.add(testUser1);
         testUserList.add(testUser2);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence();
+        Evidence testEvidence1A = new Evidence();
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence1)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
@@ -204,7 +214,8 @@ class GroupChartDataServiceTests {
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-04-30"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-04-30"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1)).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
@@ -221,7 +232,9 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-05-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-01"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-01"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -238,7 +251,9 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-05-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-01"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-01"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -255,7 +270,9 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-05-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -273,8 +290,10 @@ class GroupChartDataServiceTests {
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
         testUserList.add(testUser2);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
-        Evidence testEvidence2 = new Evidence(testUser2.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
+        Evidence testEvidence2A = new Evidence(testUser2.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -293,8 +312,8 @@ class GroupChartDataServiceTests {
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-04-30"));
-
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-04-30"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1)).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
 
@@ -319,7 +338,8 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-05-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-01"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-01"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -336,7 +356,8 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-05-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-01"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-01"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -353,7 +374,8 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-05-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-02"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-02"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -370,7 +392,8 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-05-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -389,8 +412,8 @@ class GroupChartDataServiceTests {
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-04-30"));
-
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-04-30"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1)).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
 
@@ -405,7 +428,8 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-01-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-01-01"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-01-01"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -422,7 +446,8 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-01-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-01"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-01"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -439,7 +464,8 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-01-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-05-10"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -456,7 +482,8 @@ class GroupChartDataServiceTests {
         Date startDate = Date.valueOf("2022-01-01");
         Date endDate = Date.valueOf("2022-06-01");
         testUserList.add(testUser1);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-02"));
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-06-02"));
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
@@ -473,7 +500,7 @@ class GroupChartDataServiceTests {
         Date endDate = Date.valueOf("2022-03-01");
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, new ArrayList<>());
         Map<String, Integer> result = groupChartDataService.getGroupEvidenceDataOverTime(testGroup, startDate, endDate, "month");
-        System.out.println(Arrays.asList(result));
+        System.out.println(List.of(result));
         assertEquals(3, result.size());
         assertEquals(0, result.get("2022-01"));
         assertEquals(0, result.get("2022-02"));
@@ -500,13 +527,15 @@ class GroupChartDataServiceTests {
         List<User> testUserList = new ArrayList<>();
         testUserList.add(testUser1);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
-        Evidence testEvidence2 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
-        testEvidence1.addSkill("test");
-        testEvidence1.addSkill("jUnit");
-        testEvidence2.addSkill("test");
-        testEvidence2.addSkill("Mocking");
-        List<Evidence> testEvidenceList = new ArrayList<>();
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
+        Evidence testEvidence2A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
+        testEvidence1A.addSkill("test");
+        testEvidence1A.addSkill("jUnit");
+        testEvidence2A.addSkill("test");
+        testEvidence2A.addSkill("Mocking");
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
+        List<PortfolioEvidence> testEvidenceList = new ArrayList<>();
         testEvidenceList.add(testEvidence1);
         testEvidenceList.add(testEvidence2);
 
@@ -527,10 +556,12 @@ class GroupChartDataServiceTests {
         testUserList.add(testUser1);
         testUserList.add(testUser2);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
-        Evidence testEvidence2 = new Evidence(testUser2.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
-        testEvidence1.addSkill("test");
-        testEvidence2.addSkill("test");
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
+        Evidence testEvidence2A = new Evidence(testUser2.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
+        testEvidence1A.addSkill("test");
+        testEvidence2A.addSkill("test");
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
@@ -546,10 +577,12 @@ class GroupChartDataServiceTests {
         testUserList.add(testUser1);
         testUserList.add(testUser2);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
-        Evidence testEvidence1 = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
-        Evidence testEvidence2 = new Evidence(testUser2.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
-        testEvidence1.addSkill("test");
-        testEvidence2.addSkill("Test");
+        Evidence testEvidence1A = new Evidence(testUser1.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
+        Evidence testEvidence2A = new Evidence(testUser2.getId(), testParentProjectId, "Test Evidence", TEST_DESCRIPTION, Date.valueOf("2022-02-05"));
+        testEvidence1A.addSkill("test");
+        testEvidence2A.addSkill("Test");
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
@@ -563,7 +596,7 @@ class GroupChartDataServiceTests {
     @Test
     void whenNoUsersInGroup_testGetGroupCategoryData() {
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, new ArrayList<>());
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -579,7 +612,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(new ArrayList<>()).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -591,9 +624,13 @@ class GroupChartDataServiceTests {
         testUserList.add(testUser1);
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
-        Evidence testEvidence1 = new Evidence();
-        Evidence testEvidence2 = new Evidence();
-        List<Evidence> testEvidenceList = new ArrayList<>();
+        Evidence testEvidence1A = new Evidence();
+        Evidence testEvidence2A = new Evidence();
+        testEvidence1A.setDate(dateInBound);
+        testEvidence2A.setDate(dateInBound);
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
+        List<PortfolioEvidence> testEvidenceList = new ArrayList<>();
         testEvidenceList.add(testEvidence1);
         testEvidenceList.add(testEvidence2);
 
@@ -601,7 +638,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(testEvidenceList).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -614,16 +651,18 @@ class GroupChartDataServiceTests {
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         Set<Categories> testCategoriesSet = new HashSet<>(Arrays.asList(Categories.QUANTITATIVE, Categories.QUALITATIVE));
-        Evidence testEvidence1 = new Evidence();
-        testEvidence1.setCategories(testCategoriesSet);
-        List<Evidence> testEvidenceList = new ArrayList<>();
+        Evidence testEvidence1A = new Evidence();
+        testEvidence1A.setDate(dateInBound);
+        testEvidence1A.setCategories(testCategoriesSet);
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        List<PortfolioEvidence> testEvidenceList = new ArrayList<>();
         testEvidenceList.add(testEvidence1);
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(testEvidenceList).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(1, result.get("Quantitative"));
         assertEquals(1, result.get("Qualitative"));
@@ -636,11 +675,15 @@ class GroupChartDataServiceTests {
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         Set<Categories> testCategoriesSet = new HashSet<>(Arrays.asList(Categories.SERVICE, Categories.QUANTITATIVE, Categories.QUALITATIVE));
-        Evidence testEvidence1 = new Evidence();
-        Evidence testEvidence2 = new Evidence();
-        testEvidence1.setCategories(testCategoriesSet);
-        testEvidence2.setCategories(testCategoriesSet);
-        List<Evidence> testEvidenceList = new ArrayList<>();
+        Evidence testEvidence1A = new Evidence();
+        Evidence testEvidence2A = new Evidence();
+        testEvidence1A.setDate(dateInBound);
+        testEvidence2A.setDate(dateInBound);
+        testEvidence1A.setCategories(testCategoriesSet);
+        testEvidence2A.setCategories(testCategoriesSet);
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
+        List<PortfolioEvidence> testEvidenceList = new ArrayList<>();
         testEvidenceList.add(testEvidence1);
         testEvidenceList.add(testEvidence2);
 
@@ -648,7 +691,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(testEvidenceList).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(2, result.get("Service"));
         assertEquals(2, result.get("Quantitative"));
         assertEquals(2, result.get("Qualitative"));
@@ -663,7 +706,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(new ArrayList<>(), new ArrayList<>()).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -674,14 +717,18 @@ class GroupChartDataServiceTests {
         List<User> testUserList = new ArrayList<>(Arrays.asList(testUser1, testUser2));
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
-        Evidence testEvidence1 = new Evidence();
-        Evidence testEvidence2 = new Evidence();
+        Evidence testEvidence1A = new Evidence();
+        Evidence testEvidence2A = new Evidence();
+        testEvidence1A.setDate(dateInBound);
+        testEvidence2A.setDate(dateInBound);
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -694,10 +741,14 @@ class GroupChartDataServiceTests {
 
         Set<Categories> testCategoriesSet1 = new HashSet<>(Arrays.asList(Categories.QUANTITATIVE, Categories.QUALITATIVE));
         Set<Categories> testCategoriesSet2 = new HashSet<>(Arrays.asList(Categories.QUANTITATIVE, Categories.SERVICE));
-        Evidence testEvidence1 = new Evidence();
-        Evidence testEvidence2 = new Evidence();
-        testEvidence1.setCategories(testCategoriesSet1);
-        testEvidence2.setCategories(testCategoriesSet2);
+        Evidence testEvidence1A = new Evidence();
+        Evidence testEvidence2A = new Evidence();
+        testEvidence1A.setDate(dateInBound);
+        testEvidence2A.setDate(dateInBound);
+        testEvidence1A.setCategories(testCategoriesSet1);
+        testEvidence2A.setCategories(testCategoriesSet2);
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
 
 
 
@@ -705,7 +756,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(1, result.get("Service"));
         assertEquals(2, result.get("Quantitative"));
         assertEquals(1, result.get("Qualitative"));
@@ -717,10 +768,14 @@ class GroupChartDataServiceTests {
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, testUserList);
 
         Set<Categories> testCategoriesSet = new HashSet<>(Arrays.asList(Categories.QUANTITATIVE, Categories.QUALITATIVE, Categories.SERVICE));
-        Evidence testEvidence1 = new Evidence();
-        Evidence testEvidence2 = new Evidence();
-        testEvidence1.setCategories(testCategoriesSet);
-        testEvidence2.setCategories(testCategoriesSet);
+        Evidence testEvidence1A = new Evidence();
+        Evidence testEvidence2A = new Evidence();
+        testEvidence1A.setDate(dateInBound);
+        testEvidence2A.setDate(dateInBound);
+        testEvidence1A.setCategories(testCategoriesSet);
+        testEvidence2A.setCategories(testCategoriesSet);
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
 
 
 
@@ -728,7 +783,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(2, result.get("Service"));
         assertEquals(2, result.get("Quantitative"));
         assertEquals(2, result.get("Qualitative"));
@@ -742,23 +797,25 @@ class GroupChartDataServiceTests {
         Group testGroup2 = new Group(testGroupId + 1, "Short Name 2", "Long Name 2", testParentProjectId, testUserList2);
 
         Set<Categories> testCategoriesSet = new HashSet<>(Arrays.asList(Categories.QUANTITATIVE, Categories.QUALITATIVE, Categories.SERVICE));
-        Evidence testEvidence1 = new Evidence();
-        Evidence testEvidence2 = new Evidence();
-        testEvidence1.setCategories(testCategoriesSet);
-        testEvidence2.setCategories(testCategoriesSet);
-
-
+        Evidence testEvidence1A = new Evidence();
+        Evidence testEvidence2A = new Evidence();
+        testEvidence1A.setDate(dateInBound);
+        testEvidence2A.setDate(dateInBound);
+        testEvidence1A.setCategories(testCategoriesSet);
+        testEvidence2A.setCategories(testCategoriesSet);
+        PortfolioEvidence testEvidence1 = new PortfolioEvidence(testEvidence1A, new ArrayList<>());
+        PortfolioEvidence testEvidence2 = new PortfolioEvidence(testEvidence2A, new ArrayList<>());
 
         EvidenceService mockedEvidenceService = Mockito.mock(EvidenceService.class);
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup1);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup1, startDate, endDate);
         assertEquals(1, result.get("Service"));
         assertEquals(1, result.get("Quantitative"));
         assertEquals(1, result.get("Qualitative"));
 
-        Map<String, Integer> result2 = groupChartDataService.getGroupCategoryInfo(testGroup2);
+        Map<String, Integer> result2 = groupChartDataService.getGroupCategoryInfo(testGroup2, startDate, endDate);
         assertEquals(1, result2.get("Service"));
         assertEquals(1, result2.get("Quantitative"));
         assertEquals(1, result2.get("Qualitative"));
